Predefined Objectives created.

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -45,26 +45,15 @@ Sean Webb \footnote{Sandia National Laboratory},
 
 
 
-\begin{itemize}
-\item Summarize the results presented in the report, and the contributions
-of your research.
 
-
-
-
-\item Readers should not have to look at the rest of the paper in order to 
-understand the abstract.
-
-\item Keep it short and to the point.
-\end{itemize}
 
 \section{Introduction}
 %It should be written as much as possible in non-technical terms, so that a
 %lay reader can understand the context and the contribution of the paper.
 
-The use of mechanical switches in industry is a cornerstone of the modern world. Many mechanical switches can be designed to use a spring. This is useful because depending on the use of the switch, the spring can be optimized to for the function of the spring. 
+The use of mechanical switches in industry is a cornerstone of the modern world. Many mechanical switches can be designed to use a spring. Depending on the use of the switch, the spring can be optimized to for the function of the spring. 
 
-For example, consider an acceleration switch in \ref{Acceleration Switch}. 
+For example, consider an acceleration switch in figure \ref{Acceleration Switch}. 
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Acceleration_Switch.png}\end{center}
@@ -73,21 +62,21 @@ For example, consider an acceleration switch in \ref{Acceleration Switch}.
 		 
 		 \end{figure}
 \textbf{Describe problem, approach, and summarize contribution and results.}
-This switch is used in high acceleration testing. The use is to only record information at crucial times of the test. For this reason when a certain force is exerted on the switch the pins at both ends will connect. When this happens we have a circuit that will enable data collection. It is important that the switch does not open too soon or too late otherwise the data collection will be too large or mean too little.This is just one example of a switch that we must know the best spring to make the performance maximal. For a more in depth look at this example look at \cite{IMSM2010}
+This switch is used in high acceleration testing. The use is to only record information at crucial times of the test. For this reason when a certain force is exerted on the switch the pins at both ends will connect. When this happens we have a circuit that will enable data collection. It is important that the switch does not open too soon or too late otherwise the data collection will be too large orx too little.This is just one example of a switch that we must know the best spring to make the performance maximal. For a more in depth look at this example look at \cite{IMSM2010}
 
-Given that a switch may be used in a myriad of ways, it is important that one can find an optimal spring given after the use of the spring is known. This leads to an optimization problem. Even more this leads to an optimization problem that requires the flexibility to allow how a spring is determined to be optimal by an objective function and constraints. This does not consider the fabrication constraints that exist during manufacturing, but also needs to be considered as well. 
+Given that a switch may be used in a myriad of ways, it is important that one can find an optimal spring, after the use of the spring is known. This leads to an optimization problem. Even more this leads to an optimization problem that requires the flexibility to allow how a spring is determined to be optimal by an objective function and constraints. In addition there are fabrication constraints that exist during manufacturing.  
 
-Given any constraint or objective function it will depend on a set of variables. This dependence will change when a constraint or objective function changes. In optimization we only wish to concern ourselves with the state variables that are allowed to change during optimization. For this reason, we construct a spring object that will hold all attributes of a spring and we can pull the relevant variables when it is determined what they are. 
+Given any constraint or objective function it will depend on a set of variables. In optimization we only wish to concern ourselves with the state variables that are allowed to change during optimization. For this reason, we construct a spring object that will hold all attributes of a spring and we can pull the relevant variables when it is determined what they are. 
 
-In addition to this spring object, to reduce the uncertainty of the problem we conduct a sensitivity analysis of the objective function subject to the constraints and variables given. This allows the user to reduce the state variables if it is determined that the set of variables given has insensitive variables. 
+In addition to this spring object, to reduce the uncertainty of the problem we conduct a sensitivity analysis of the objective function subject to the constraints and variables given. Allowing the user to reduce the state variables if it is determined that for a set of variables given there exist insensitive state variables. 
 
 A main contribution of this work is the framework to add constraints and objectives that may be unknown at the point of this paper. In parallel to this we have built a framework that is flexible enough to address the issue of unknown constraints and objectives. \textbf{ADD!}
 
 
 \textbf{review history and existing literature}
-Designing an optimal spring is not a new problem. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration with enabled uncertainty. This approach lead to a paper \cite{IMSM2010}. This is not the only approach to uncertainty, in \cite{Reliability} probabilistic response surface methodology was implemented to investigate the complications of uncertainty in designing a spring. In addition to these types of approaches it is possible to narrow focus to a single parameter, in \cite{Robust} they focus on the spring stiffness. 
+Designing an optimal spring is not a new problem. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration switch with enabled uncertainty. In fact, the switch they considered was in figure \ref{Acceleration Switch}. This approach lead to a paper \cite{IMSM2010}. This is not the only approach to uncertainty, in \cite{Reliability} probabilistic response surface methodology was implemented to investigate the complications of uncertainty in designing a spring. In addition to these types of approaches it is possible to narrow focus to a single parameter, in \cite{Robust} they focus on the spring stiffness. In \cite{Paredes} they attempt to design an optimal spring, with the introduction of a sizing tool. All references listed are informed to some extent by \cite{Wahl}. 
 
-Our approach is not limited to an acceleration switch, instead it is but a special case of our approach. In \cite{Paredes} they attempt to design an optimal spring, with the introduction of a sizing tool. All references listed are informed to some extent by \cite{Wahl}. We do not focus on a set of parameters or attempt to fix the uncertainty of the spring design problem initially. We attempt to allow any possible construction of a spring optimization possible. 
+Our approach is not limited to an acceleration switch, instead it is but a special case of our approach. We do not focus on a set of parameters or attempt to fix the uncertainty of the spring design problem initially. We attempt to allow any possible construction of a spring optimization possible. 
 
 This does not rule out if a construction is not physically or mathematically invalid. We will dispose of that case when we are unable to find a feasible point for optimization within our feasibility check. In summary, we need to allow any possible construction of a spring design problem, and adjust accordingly. 
 
@@ -97,18 +86,11 @@ In this paper we will give a description of the springs of interest, helical com
 
 
 
-\begin{itemize}
-\item Describe the problem you are trying to solve, the approach
-you took, and summarize your contribution and results.
 
-\item Review the history of this problem, and existing literature.
-
-\item Give an outline of the rest of the paper.
-\end{itemize}
 
 \section{Helical Compression Springs}
 
-Helical springs are a large class of springs sharing the common characteristic of a coiled appearance, see figure \ref{Spring}. 
+Helical springs are the typical spring that comes to most peoples mind, for illustrative purposes, see figure \ref{Spring}. 
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Spring.png}\end{center}
@@ -143,10 +125,10 @@ Below is a list of a spring's key design parameters. We have added a few illustr
 			\item Total number of spring coils $N_{t}$.
 			\item Active number of spring coils $N_{a}$, active coils are not touching any other coils, and is subject to the spring being closed or open. 
 			\item Pitch $p$ illustrated in figure \ref{Description1}.
-			\item Spring's free length $L_{free}$, this is the spring's length without any force applied. 
+			\item Spring's free length $L_{free}$, the spring's length without any force applied. 
 			
-			\item Spring's solid length $L_{solid}$, this is the spring's length when all coils are compressed together.
-			\item Spring's open length $L_{open}$, spring length at open position, open is beginning state.
+			\item Spring's solid length $L_{solid}$, the spring's length when all coils are compressed together.
+			\item Spring's open length $L_{open}$, the spring's length at open position, open is beginning state.
 			\item Spring's open length $L_{close}$, spring length at close position, close is the ending state.
 			\item Spring's open length $L_{hard}$, the maximum a spring can compress for the application.
 			\item Spring's open force $F_{open}$, this is the force on the spring in open position.
@@ -161,17 +143,16 @@ Below is a list of a spring's key design parameters. We have added a few illustr
 		In addition to these parameters there are the following attributes that are empirical given some regime we care about.
 		
 			\begin{enumerate}
-				\item Spring Rate, $$k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}$$
+				\item Spring Rate, $k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}$
 				
-				\item Spring Index, $$C = \frac{d_{i}}{d_{w}} + 1$$.
+				\item Spring Index, $C = \frac{d_{i}}{d_{w}} + 1$.
 				
-				\item Coil Binding Gap, $$g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}$$
+				\item Coil Binding Gap, $g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}$
 		
-				\item $$\frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
-d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS$$ where UTS is the ultimate torsional stress.
+				\item $\frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
+d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS$ where UTS is the ultimate torsional stress.
 		
-				\item Diametral Expansion, $$d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + 
-				\frac{p_{closed}^{2} - d_{w}}{\pi^{2}}}$$
+				\item Diametral Expansion, $d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + \frac{p_{closed}^{2} - d_{w}}{\pi^{2}}}$
 			\end{enumerate}
 			
 \section{The Problem} 
@@ -183,7 +164,7 @@ A list of possible constraints/objectives given in minimization form is below
 \begin{enumerate}
 \item $d_{i} < d_{i}^{max}$
 \item $d_{i} < d_{o}$
-\item $d_{i} + 2*d_{w} < d_{o}^{max}$
+\item $d_{i} + 2d_{w} < d_{o}^{max}$
 \item$d_{expand} - d_{0}^{max} < 0 $
 \item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $
 \item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$
@@ -192,15 +173,16 @@ A list of possible constraints/objectives given in minimization form is below
 \item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$
 \item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
-%\item Relaxation
 \end{enumerate}	
 
+This list is not exhaustive as we want a user to be able to define new constraints and objectives. 
+In addition to these we should be able to minimize any parameter of the spring. 
 
 
 \textbf{ADD RELAXATION HERE!}
 
 
-In addition to these we should be able to minimize any attribute of the spring. 
+
 
 In order to simplify the problem we have made some assumptions. First, we have assumed that constraints and objectives are all in terms of the number of total coils. This is to reduce the complexity of knowing if a constraint is dependent on the active number or total number of coils. These two numbers are dependent on the end conditions of the spring, whether it is open or closed at the end. For simplicity we also will consider all springs to be have a closed end condition. 
 
@@ -208,7 +190,10 @@ With these assumptions we simplify our constraints for pitch, $p$, solid length,
 
 \textbf{JUSTIFY ASSUMPTIONS}
 
-\textbf{Describe data, how collected, properties of data, and whether anything was done to it.}
+\textbf{Describe your data, how you collected them, their properties,
+and whether you did 
+anything to them (removed noise, filled in missing data, 
+applied normalizations).}
 
 \section{The Problem}
 \begin{itemize}
@@ -247,10 +232,29 @@ Don't just say: ``I did this, then I did this, and at last I did this''.
  		\begin{figure}[h!]
 		 \begin{center}\includegraphics[scale=.4]{IMSM_Workflow.png}\end{center}
 		 \caption{Illustration of the flow of our approach.}
-		 \label{Spring}
+		 \label{Workflow}
 		 
 		 \end{figure}
-Above is a  
+Above is an illustration of the workflow that is our approach. This section will go in depth into the feasibility, sensitivity analysis and optimization of our approach.
+
+\subsection{Feasibility}
+
+\subsection{Sensitivity Analysis}
+\hspace{5 mm} As the dimension of design variable space increases, the computational expense of the optimization procedure increases. To reduce the computational expense, it is often desirable to reduce the design variable space by removing the variables that have very little influence on the objective function. Thus, a dimension reduction strategy is required to reduce the design variable space. Dimension reduction approaches, in the literature have been divided into two categories - (1)filter approach, and (2)wrapper approach. In the filter approach, the input variables are ranked according to a ranking criterion and the most dominant variables can be selected by assuming a threshold influence value. In the wrapper approach, a subset of variables is selected from the list of all possible subsets of the input variables that best estimate the output variable. An optimization technique is used to obtain the best subset of input variables. In this work, the variance-based Global Sensitivity Analysis (GSA), a filter approach, is used for dimension reduction. Note that the input variables represent the design variables for the objective function.
+
+\hspace{5 mm} Consider a objective function, $G$, with $n$ design variables given by $x_{1}$, $x_{2}$, ...  $x_{n}$, given by
+
+\centerline{$Y = G(x_{1}, x_{2}, ... x_{n})$}
+
+In GSA, two types of indices can be calculated for each variable - first order index and total effects index. The first-order index ($S_{i}^{I}$) quantifies the uncertainty contribution of an input variable, without considering its interactions with other variables, to the output variable uncertainty. Similarly, the total effects index ($S_{i}^{T}$) quantifies the uncertainty contribution of an input variable by considering its interactions with all variables, to the output uncertainty. The expressions for the two sensitivity indices are given below as 
+
+\centerline{$S_{i}^{I} = \frac{V_{X_i}(E_{X_{-i}}(Y|X_{i}))}{V(Y)}$}
+\centerline{$S_{i}^{T} = \frac{E_{X_{-i}}(V_{X_{i}}(Y|X_{-i}))}{V(Y)}$}
+
+Given a design range (lower and upper bounds), a variable can be assumed to be uniformly distributed in the design range. For each variable, the total-effects index is calculated and if it is less than an assumed threshold value, then that variable is assumed insensitive and removed from the optimization procedure. Thus, dimension reduction is implemented for a faster design optimization.
+\subsection{Optimization}
+ 
+ 
 
 \section{Computational Experiments}
 Give enough details so that readers can duplicate your experiments.
@@ -273,6 +277,12 @@ and what is being plotted.
 \end{itemize}
 
 \section{Summary and Future Work}
+The ability to interchange constraints and objective functions with any number of design variables allows the user the utmost flexibility. With the addition of feasibility and sensitivity analysis it is possible for any configuration of objective function, constraints, and design variables to be analyzed for refinement. The quantification of stress relaxation and creep allow the user a chance to incorporate these properties into any configuration, especially those that have never been tested. 
+
+Some limitations of the approach outlined are as follows. The choice of optimization and sensitivity analysis are fixed, however, they are modularized to allow a different optimization routine and sensitivity analysis to be ported in. Given the amount of flexibility that is enabled, a user will have to be able to decide if a infeasible solution is due to user error. 
+
+Future work is bountiful for this approach. More analysis of the stress relaxation and creep could result in better performance. Also, 
+
 \begin{itemize}
 \item Briefly summarize your contributions, and their possible
 impact on the field (but don't just repeat the abstract or introduction).
