Added a folder for the presentation.

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt]{article}
 \usepackage[final]{graphicx}
 \usepackage{amsfonts}
-
+\usepackage{amsmath}
 \usepackage{caption}
 \usepackage{subcaption}
 
@@ -61,6 +61,8 @@ For example, consider an acceleration switch in figure \ref{Acceleration Switch}
 		 \label{Acceleration Switch}
 		 
 		 \end{figure}
+		 
+		
 \textbf{Describe problem, approach, and summarize contribution and results.}
 This switch is used in high acceleration testing. The use is to only record information at crucial times of the test. For this reason when a certain force is exerted on the switch the pins at both ends will connect. When this happens we have a circuit that will enable data collection. It is important that the switch does not open too soon or too late otherwise the data collection will be too large orx too little.This is just one example of a switch that we must know the best spring to make the performance maximal. For a more in depth look at this example look at \cite{IMSM2010}
 
@@ -137,23 +139,25 @@ Below is a list of a spring's key design parameters. We have added a few illustr
 			\item Spring's shear modulus $G$, this is determined by the material of the spring.
 			\item Spring's youngs modulus $E$, this is determined by the material of the spring.
 			\item Spring's poisson ratio $\nu$, this is determined by the material of the spring.
+			\item Ultimate torsional stress, UTS. 
 		
 		\end{enumerate}
 		
 		In addition to these parameters there are the following attributes that are empirical given some regime we care about.
 		
-			\begin{enumerate}
-				\item Spring Rate, $k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}$
+			%\begin{enumerate}
+			%	\item 
+			Spring Rate:\begin{equation} k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}\end{equation}
 				
-				\item Spring Index, $C = \frac{d_{i}}{d_{w}} + 1$.
+				 Spring Index:\begin{equation}C = \frac{d_{i}}{d_{w}} + 1.\end{equation}
 				
-				\item Coil Binding Gap, $g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}$
+				Coil Binding Gap\begin{equation} g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}\end{equation}
 		
-				\item $\frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
-d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS$ where UTS is the ultimate torsional stress.
+				 Max Shear Stress\begin{equation} \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
+d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS\end{equation}
 		
-				\item Diametral Expansion, $d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + \frac{p_{closed}^{2} - d_{w}}{\pi^{2}}}$
-			\end{enumerate}
+				Diametral Expansion\begin{equation} d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + \frac{p^{2} - d_{w}}{\pi^{2}}}
+			\end{equation}
 			
 \section{The Problem} 
 
@@ -257,6 +261,109 @@ Given a design range (lower and upper bounds), a variable can be assumed to be u
  
 
 \section{Computational Experiments}
+\subsection{Basics about uni-axial creep and stress relaxation}
+The spring is heated to $0.3-0.5T_m$ ($T_m$ is the melting temperature of the material) and loaded by a tensile force. The induced normal stress $\sigma$ is much less than the yield limit of the material $\sigma_y$. The load and temperature are constant throughout the test. The strain $\epsilon^{cr}$ will slowly increase.
+
+Conventionally, creep can be divded into $3$ stages. In the first stage(primary/reduced/trasient) ,the creep strain rate decreases to a certain value(minimum creep rate). The second stage(secondary/steady/stationary creep) is characterized by a nearly constant creep rate(minimum creep rate). In the third stage(tertiary creep), the creep strain rates increases rapidly and leads to rupture. The first stage is usually reversible with time after unloading, while the second/third ones are not. Since the primary creep occurs in a short duration and the tertiary one leads quickly to rupture, the secondary creep is under most serious consideration in many design in many engineering applications.
+
+Stress relaxation is the phenomenon that the stress decreases when the strain is held constant in time. During the test the load is continuously decreased in such a way that the initial strain remains constant.
+
+\subsection{Creep rate law of material}
+The starting point is the assumption that the creep rate may be described as a product of two separate functions of stress, temperature and time
+\[
+\epsilon^{cr}=f_\sigma (\sigma) f_T(T) f_t(t)
+\]
+The widely used functions of stress $f_\sigma(\sigma)$ are:
+
+\begin{tabular}{ll}
+$a\sigma^n$ & Norton, 1929, Bailey, 1929 \\
+$b\left( \exp{\sigma\over \sigma_0} -1 \right)$ & Soderberg, 1936 \\
+$a\mathop{sinh}{\sigma\over \sigma_0}$ & Prandtl, 1928, Nadai, 1938, McVetty, 1943\\
+$a_1\sigma^{n_1} + a_2 \sigma^{n_2}$ & Johnson et al., 1963 \\
+$a\mathop{sinh} \left( {\sigma\over \sigma_0}\right)^n$ & Garofalo, 1965
+\end{tabular}
+
+where $a,b,a_1,a_2,\sigma_0,n_1,n_2$ are material constants that could depend on time $t$. The dependence on the temperature $f_T(T)$ is usually expressed by the Arrhenius law
+\[
+f_T(T) = \exp \left( {-Q\over RT}\right)
+\]
+where $Q$ and $R$ denote the activation energy and the Boltzmann's constant.
+
+The time dependence part $f_t(t)$ is
+
+\begin{tabular}{ll}
+$t$ & secondary creep \\
+$bt^m$ & Bailey \\
+$(1+bt^{1/3})\exp{kt}$ & Andrade\\
+$\sum_j a_j t^{m_j}$ & Graham and Walles
+\end{tabular}
+
+For simplicity, we are going to only use the Norton-Bailey law.
+\subsection{Stress relaxation of helical spring}
+Due to conservation of the total shear strain, the sum of the creep strain $\epsilon^{cr}$'s rate of change and that of elastic shear strain $\epsilon_{el}$ is zero:
+\[
+\dot{\epsilon}_{cr} + \dot{\epsilon}_{el} = 0
+\]
+The elastic shear strain is related to the shear stress by shear modulus $G$:
+\[
+\epsilon_{el} = \sigma/G
+\]
+and therefore
+\[
+\dot{\epsilon}_{el} = \dot{\sigma}/G
+\]
+According to Norton-Bailey law(also known as time hardening law),
+\begin{equation} \label{eq:N-B}
+\dot{\epsilon}_{cr}(t)=c\sigma^{n+1} t^{k-1}
+\end{equation}
+where $c$ is the shear strain rate, $n,k$ are temperature dependent material constants.
+
+Substituting the above two equations to the conservation law,
+\begin{equation} \label{eq:diff}
+\dot{\sigma}(t)/G+c\sigma(t)^{n+1} t^{k-1}=0
+\end{equation}
+The initial condition is
+\[
+\sigma (0) = G\theta r
+\]
+where $\theta$ is the initial twist angle per unit length, $r$ the radius of wire.
+
+\[
+\sigma = \left( (G\theta r)^{-n} + {c\over k} Gnt^k \right)^{-{1\over n}}
+\]
+
+The torque can be written as
+\[
+M(t) = 2\pi \int_0^{d_w} r^2 \sigma(r,t)\,\mathrm{d} r ={}_{2}F_1 \left( {4\over n},{1\over n};{4+n\over n};{c\theta^n G^{n+1} n t^k\over k} {d_w^n\over 2^n}\right) M(0)
+\]
+where $d_w$ is the wire diameter.
+
+Since the spring load is linearly related the torque $P_z(t)\propto M(t)$, given the constant deflection $s$,
+\[
+{P_z(t)\over P_z(0)} = {}_{2}F_1 \left( {4\over n},{1\over n};{4+n\over n};{c\theta^n G^{n+1} n t^k\over k} {d_w^n\over 2^n}\right)
+\]
+where
+\[
+\theta = {2s\over \pi N_a ((d_i+d_o)/2)^2}
+\]
+The closer this quantity is to $1$, the better the spring quality is.
+
+\subsection{Creep of helical spring}
+The starting point is still the Norton-Bailey law (\label{eq:N-B}). There is naturally another way to write the shear strain rate:
+\[
+\dot{\epsilon}^{cr} = \dot{\theta} r = {8\dot{s} r\over \pi N_a (d_i+d_o)^2}
+\]
+We obtain $\sigma$ from substiting the above equation into Norton-Bailey law. Given the constant spring force $P_z^0$,
+\[
+P_z^0{d_i+d_o\over 4}=M(0)=2\pi\int_0^{d_w} r^2 \sigma(r,t)\,\mathrm{d} r
+={\pi\over 4}{n+1\over 4+3n}\left( {8d_w^{4+3n}\dot{s} \over t^{k-1} (d_i+d_o)^2 \pi N_a c (d_i+d_o)^2} \right)^{{1\over n+1}}
+\]
+It can be deduced that the spring length $s$ follows
+\[
+s(t) = s(0) + \left( {(d_i+d_o)P_z^0\over \pi}{4+3n\over n+1} \right)^{n+1} {\pi (d_i+d_o)^2 N_a c\over 8kd_w^{4+3n}} t^k
+\]
+where $s(0)$ is the initial spring length. The less the difference of the spring length $s(t)-s(0)$, the better the spring quality is.
+
 Give enough details so that readers can duplicate your experiments.
 
 \begin{itemize}
@@ -283,13 +390,7 @@ Some limitations of the approach outlined are as follows. The choice of optimiza
 
 Future work is bountiful for this approach. More analysis of the stress relaxation and creep could result in better performance. Also, 
 
-\begin{itemize}
-\item Briefly summarize your contributions, and their possible
-impact on the field (but don't just repeat the abstract or introduction).
-\item Identify the limitations of your approach.
-\item Suggest improvements for future work.
-\item Outline open problems.
-\end{itemize}
+
 
 \vfill\pagebreak
 
