Updated the .bib with Siadeep's sources.

--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -62,11 +62,43 @@
 }
 
 @article{IMSM2010,
-    author  = {M. R. Brake and J.E. Mossad and B. Beheshti and J. Davis and R.C. Smith and K. Chowdhary and S. Wang},
+    author  = {M. R. Brake and J.E. Massad and B. Beheshti and J. Davis and R.C. Smith and K. Chowdhary and S. Wang},
     title   = {Uncertainty Enable Design of an Acceleration Switch},
     year    = {2011},
     journal = {Proceedings of ASME 2011 International Mechanical Engineering Congress and Exposition},
 }
+
+@article{Bioinformatics,
+    author  = {Yvan Saeys and Inaki Inza and Pedro Larranaga},
+    title   = {A Review of Feature Selection Techniques in Bioinformatics.},
+    year    = {2007},
+    journal = {Bioinformatics},
+}
+
+@article{Wrappers,
+    author  = {Ron Kohavi and George H. John},
+    title   = {Wrappers for Feature Subset Selection},
+    year    = {1996},
+    journal = {Artificial Intelligence},
+}
+
+@article{Error,
+    author  = {Bin Liang and Sankaran Mahdevan},
+    title   = {Error and Uncertainty Quantification and Sensitivity Analysis in Mechanics Computational Models},
+    year    = {2003},
+    journal = {International Journal for Uncertainty Quantification},
+}
+
+
+@book {Global,
+ author = {A. Saltelli and Marco Ratto and Terry Andres and Francesca Campolongo and Jessica Cariboni and Debora Gatelli and Michaela Saisana and Stefano Tarantola},
+ publisher = {John Wiley and Sons Ltd.},
+ title = {Global Sensitivity Analysis: The Primer},
+ year = {2008},
+ edition = {First},
+}
+
+
 
 
 
