--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -89,6 +89,36 @@
     journal = {International Journal for Uncertainty Quantification},
 }
 
+@article{Derivative,
+    author  = {Luis Miguel Rios and Nikolaos V. Sahinidis},
+    title   = {Derivative-free Optimization: A Review of Algorithms and Comparison of Software Implementations},
+    year    = {2012},
+    journal = {Springer Science+Business Media},
+}
+
+@article{DirectPaper,
+    author  = {Mattias Bjorkman and Kenneth Holmstrom},
+    title   = {Global Optimization Using the DIRECT Algorithm in Matlab},
+    year    = {1999},
+    journal = {Advanced Modeling and Optimization},
+}
+
+@book{MATLAB:2014a,
+	author = {MATLAB},
+	title = {version 8.3.0.532 (R2014a)},
+	publisher = {The MathWorks Inc.},
+	address = {Natick, Massachusetts},
+	year = {2014},
+}
+
+
+@article{DirectUserGuide,
+    author  = {Daniel E. Finkel},
+    title   = {DIRECT Optimization Algorithm User Guide},
+    year    = {2003},
+}
+
+
 
 @book {Global,
  author = {A. Saltelli and Marco Ratto and Terry Andres and Francesca Campolongo and Jessica Cariboni and Debora Gatelli and Michaela Saisana and Stefano Tarantola},
